Fix broken css

--- a/src/stylesheets/_downloads.scss
+++ b/src/stylesheets/_downloads.scss
@@ -37,3 +37,7 @@
     }
   }
 }
+
+small {
+  font-size: 80%;
+}
